<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:text="@string/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_text_view"
        />

    <TextView android:text="@string/java_sample_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/java_sample_text_view"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:onClick="launchJavaJoke"
        />

    <TextView android:text="@string/app_sample_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_sample_text_view"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:onClick="launchAppJoke"
        />

    <TextView android:text="@string/gce_sample_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gce_sample_text_view"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_text_view"
        android:text="@string/button_text"
        android:onClick="launchGTEJoke"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
